examples/test/testpolicy14546.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14546
  namespace: namespace394
spec:
  podSelector:
    matchLabels:
      key38: value18
      key45: value40
      key37: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value30
          key5: value5
          key12: value26
      podSelector:
        matchLabels:
          key32: value26
          key10: value45
          key38: value3
